# delta-lake-experiments

./: README.md  pyproject.toml  test_playground.py
data/: append.csv  append_1.csv  append_bad_data.csv
